...
}

@Composable
fun HomeEmptyState() {
    Column(
        modifier = Modifier
            .testTag("home_empty_state")
            .fillMaxSize()
            .liveRegionContainer("Estado: sin resultados", "Sin resultados"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        Icon(
...
    onRetry: () -> Unit
) {
    val text = message ?: stringResource(R.string.home_screen_rocket_error_loading)

    Column(
        modifier = Modifier
            .testTag("home_error_state")
            .fillMaxSize()
            .liveRegionContainer("Estado: error de carga $text", "Error"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        Icon(
...
